--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /*
-Page name: Question 2A - CSS
+Page name: CSS
 Description: Provides stylistic formatting such as background color, spacing,
 and font choice for index.html
 */
